[package]
name = "dissonance"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
description = "An async-friendly Rust library for generating Noise-encrypted transport protocols"
repository = "https://github.com/sajmon170/dissonance"
homepage = "https://github.com/sajmon170/dissonance"

[dependencies]
bytes = "1.8.0"
futures = "0.3.31"
pin-project = "1.1.7"
postcard = { version = "1.0.10", features = ["alloc"] }
serde = "1.0.214"
snow = "0.9.6"
strum_macros = "0.26.4"
tokio = "1.41.1"
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
tracing = "0.1.40"
